[package]

name = "huebridge"
version = "0.1.0"
authors = ["Nicolas GAUTIER <ngautier@enroot.fr>"]
description = "Rust library for Philips Hue"
homepage = "https://github.com/NikoWoot/huebridge"
repository = "https://github.com/NikoWoot/huebridge"
readme = "README.md"
license = "CC-BY-SA-4.0"
keywords = [ "Philips", "hue", "light", "bulb", "zigbee" ]
edition = "2018"

[dependencies]
error-chain="0.12"
regex = "1.3"
reqwest = { version = "0.10", features = [ "blocking", "json" ]}
serde = "1"
serde_json = "1"
serde_derive = "1"
